# MediafileAutoFormatter

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.agents/workflows/: e2e_test.md
resources/translator/: instructions.txt
src/: arguments.py  constants.py  env_configs.py  errors.py  handler.py  log_exporter.py  manager.py
src/analyzer/: analyzer.py  error.py  media_analyzer.py  media_analyzer_factory.py  media_type_analyzer.py  metadata_builder.py  metadata_reader.py  mkv_subtitle_extractor.py
src/constructor/: constructor.py
src/executor/: errors.py  executor.py
src/formatter/: errors.py  formatter.py  smi_to_ass_converter.py  smi_to_srt_converter.py  subtitle_converter.py
src/manager/: manager.py
src/model/: file.py  folder.py  metadata.py  structable.py  token.py
src/restructor/: audio_track_changer.py  errors.py  movie_restructor.py  restructor.py  restructor_factory.py  resturct_logger.py  show_restructor.py  subtitle_extractor.py  subtitle_syncer.py  tv_restructor.py
src/translator/: subtitle_translator.py
